DWX-5018: Move Hive image to jdk 11
Change-Id: I042c707ae281fb0a5778724e1a9f05db110dfafd